--- a/css/sass/_content.scss
+++ b/css/sass/_content.scss
@@ -22,7 +22,7 @@
 
 .entry-meta {
 	font-size: 0.875em;
-	color: $color-blue;
+
 	a > time {}
 
 	.byline a {}
