--- a/css/sass/_footer.scss
+++ b/css/sass/_footer.scss
@@ -109,7 +109,7 @@
 
 .list-social a:active,.list-social a:focus,.list-social a:hover {
 	text-decoration: none;
-	color: $color-blue;
+	color: $color-red;
 	background: $color-white;
 }
 
