--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -3,6 +3,8 @@
 
 .site-header {
 	.custom-header {
+	    clear: both;
+
 		.site-branding {
 			padding-top: 1.5em;
 			padding-bottom: 1.5em;
